
-------------------------------------------------------------------



-------------------------------------------------------------------
4.02.0:

-Config checks for new default Bitcoin exchange/pairing config settings

-Hardware sensor(s) data included in debugging mode stats (cpu / temperature / load / etc)

-Sort all exchange / pairing drop-down menus alphabetically (better user experience with large lists)

-API exchange support for southxchange, braziliex, bitflyer

IMPORTANT NOTE: v4.00.0 and higher of this app REQUIRES DELETING YOUR PREVIOUS CHART DATA FROM ANY EARLIER VERSIONS.
MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWARDS-COMPATIBLE.

-------------------------------------------------------------------



-------------------------------------------------------------------
4.02.1:

-UX revisions

-Code cleanup / optimization

-Misc bug fixes in new logic

-Additional configuration scanning / error logging

-Stand-Alone Mode for the Fiat Currency Market setting, on the "Settings" page

-Moved spot price / volume charts to a sub-directory within the charts directory, for future chart scalability

IMPORTANT NOTE: v4.00.0 and higher of this app REQUIRES DELETING YOUR PREVIOUS CHART DATA FROM ANY EARLIER VERSIONS.
MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWARDS-COMPATIBLE.

-------------------------------------------------------------------



-------------------------------------------------------------------
4.03.0:

-Re-organized chart directory structure (again) for cached time period data sets (1 month / 3 month / 6 month / etc, for quicker chart loading)

IMPORTANT NOTE: v4.00.0 and higher of this app REQUIRES DELETING YOUR PREVIOUS CHART DATA FROM ANY EARLIER VERSIONS.
MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWARDS-COMPATIBLE.

-------------------------------------------------------------------









