@@ -2033,7 +2033,11 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 -------------------------------------------------------------------
 4.03.0:
 
--Re-organized chart directory structure (again) for cached time period data sets (1 month / 3 month / 6 month / etc, for quicker chart loading)
+-Raspberry PI system stats in webpage footer (if a Raspberry Pi system is detected)
+
+-Re-organized chart directory structure (again) for UPCOMING cached time period data sets (1 month / 3 month / 6 month / etc, for quicker chart loading)
+
+-Integrated new system info module into app debugging mode 'stats' (logs hardware / software / system stats to debugging log, when debugging is activated)
 
 IMPORTANT NOTE: v4.00.0 and higher of this app REQUIRES DELETING YOUR PREVIOUS CHART DATA FROM ANY EARLIER VERSIONS.
 MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWARDS-COMPATIBLE.
